css/styles.css
*,
*:before,
*:after{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

:root{
    --primary-color: #08c0dd;
    --secondary-color: #262431;
    --tertiary-color: #2f2c3d;
}

html,
body{
    font-family: "Open Sans", sans-serif;
    background: var(--secondary-color);
    color: #fff;
    line-height: 1.6;
    scroll-behavior: smooth;
}

a{
    color: #fff;
    text-decoration: none;
}

ul{
    list-style: none;
}

img{
    max-width: 100%;
}

/* Utility Classes */

.container{
    max-width: 1100px;
    margin: 0 auto;
}

.btn{
    padding: 0.5rem 2rem;
    background-color: var(--primary-color);
    border: 2px solid transparent;
    color: #fff;
    font-weight: 600;
    border-radius: 50px;
    transition: background-color 0.3s ease;
}

.btn:hover{
    background-color: var(--secondary-color);
    border-color: var(--primary-color);

}

/* Navbar */

.navbar{
    padding: 1rem 2rem;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;
    background-color: transparent;
    transition: background-color 0.3s ease-in-out;
}

.navbar.navbar--scroll{
    background-color: rgb(38, 36, 49, 0.8);
    backdrop-filter: blur(10px);
}

.navbar__container{
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar__logo img{
    width: 112px;
    height: 35px;
}

.navbar__menu-list{
    display: flex;
    align-items: center;
    gap: 2rem;
    font-weight: 600;
}

.navbar__menu-link:hover,
.navbar__mobile-menu-link:hover{
    color: var(--primary-color);
}

.navbar__menu-link--primary,
.navbar__mobile-menu-link--primary{
    color: var(--primary-color);
}

.navbar__menu-link--primary:hover,
.navbar__mobile-menu-link--primary:hover{
    color: #fff;
}

/* Mobile Menu */

.navbar__mobile-menu{
    display: none;
    cursor: pointer;
}

.navbar__mobile-menu-items{
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background: var(--secondary-color);
    opacity: 0.95;
    padding: 3rem 2rem;
    text-align: center;
    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    transition: transform 0.3s ease-in-out;
}

.navbar__mobile-menu-list{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    font-size: 1.2rem;
}

.navbar__mobile-menu-items{
    transform: translateX(100%);
}

.navbar__mobile-menu-items.active{
    transform: translateX(0);
}

/* Hero */

.hero{
    background: #000 url(../images/header-background.jpg) center center/cover no-repeat;
    padding: 11.5rem 2rem 8rem;
}

.hero__container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    grid-area: 2rem;
}

.hero__content{
    max-width: 500px;
}

.hero__title{
    font-size: 3.5rem;
    text-transform: uppercase;
    font-weight: 700;
    line-height: 1.2;
}

.hero__title--primary{
    color: var(--primary-color);
}

.hero__description{
    margin-top: 1.5rem;
    font-size: 1.2rem;
    line-height: 1.6;
}

.hero_image img{
    max-width: 500px;
}

.hero__buttons{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1.5rem;
    margin-top: 2rem;
}

.hero__button{
    padding: 1rem 2rem;
}

.hero__button i{
    margin-right: 0.5rem;
}

/* Testimonials */

.testimonials{
    padding: 4rem 2rem;
    text-align: center;
}

.testimonials__container{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
    align-items: center;
    justify-content: center;
}

.testimonials__card{
    padding: 0 3rem;
}

.testimonials__image img{
    width: 96px;
    height: 96px;
    border-radius: 50%;
    margin-right: auto;
    margin-left: auto;
    margin-bottom: 1.5rem;
}

.testimonials__card-text{
    font-style: italic;
    margin-bottom: 1.5rem;
}

/* Features */

.features{
    background-color: var(--tertiary-color);
    padding: 6rem 2rem;
}

.features__container{
    text-align: center;
}

.features__title{
    font-size: 2.3rem;
    margin-bottom: 2rem;
    text-transform: uppercase;
}

.features__description{
    max-width: 600px;
    margin: 1rem auto 4rem;
}

.features__grid{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
}

.features__grid-column{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 6rem;
}

.features__grid-item{
    display: flex;
    align-items: start;
    justify-content: start;
    text-align: right;
    gap: 1.5rem;
}

.features__grid-item-text-title{
    font-size: 1.3rem;
    font-weight: 600;
    margin-bottom: center;
}

.fetures__grid-item-icon{
    margin-top: 2rem;
}

.features__grid-item-icon i{
    color: var(--primary-color);
}

.features__grid-column-right .features__grid-item{
    flex-direction: row-reverse;
    text-align: left;
}

@media(max-width: 992px){

    /* Hero */

    .hero{
        padding: 10rem;
        text-align: center;
    }

    .hero__container{
        flex-direction: column;
    }

    .hero__title{
        font-size: 2.3rem;
    }

    .hero__buttons{
        flex-direction: column;
        gap: 1rem;
    }

    .hero__button{
        width: 100%;
    }

    .hero__image img{
        max-width: 350px;
    }

    /* Testimonials */

    .testimonials__container{
        grid-template-columns: repeat(2, 1fr);
    }

    .testimonials__card{
        padding: 0 1.5rem;
    }

    .testimonials__card:nth-child(3){
        display: none;
    }

    /* Features */

    .features__grid{
        grid-template-columns: 1fr;
    }

    .features__grid-column-left,
    .features__grid-column-right{
        order: 2;
        margin-bottom: 2rem;
    }

    .features__grid-column-center{
        order: 1;
        margin-bottom: 3rem;
    }

    .features__grid-item,
    .features__grid-column-right,
    .features__grid-item{
        text-align: center;
        flex-direction: column-reverse;
        max-width: 400px;
    }

    .features__grid-item-icon{
        margin: 0 auto;
    }

    .features__grid-column-center img{
        max-width: 300px;
    }
}

@media(max-width: 768px){
    .navbar__menu{
        display: none;
    }

    .navbar__mobile-menu{
        display: block;
    }

    .testimonials__container{
        grid-template-columns: 1fr;
    }

    .testimonials__card:nth-child(2){
        display: none;
    }
}

